[gd_scene load_steps=2 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="ShownLine" type="RichTextLabel" parent="."]
margin_left = 34.0
margin_top = 461.573
margin_right = 225.0
margin_bottom = 507.573
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 35.0034
margin_top = 513.522
margin_right = 190.003
margin_bottom = 552.522
rect_pivot_offset = Vector2( 155, 19.5 )
text = "Next"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="."]
margin_left = 820.116
margin_top = 530.003
margin_right = 975.116
margin_bottom = 569.003
rect_pivot_offset = Vector2( 155, 19.5 )
text = "Add"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineInput" type="TextEdit" parent="."]
margin_left = 740.502
margin_top = 485.997
margin_right = 975.502
margin_bottom = 517.997
hint_tooltip = "Add new line equation"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
